--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ### venv template
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+Rabby_v*
 .vscode/**/*[!settings].json
 .idea
 .DS_Store
